--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "datocms-react-ui": "^0.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.4",
     "react-scripts": "5.0.1",
     "sass": "^1.56.0",
     "typescript": "^4.8.4"
